- Refactor: Cleanup deprecated DepartmentForum
- Refactor: Cleanup deprecated department argument in TeacherGroup
- Refactor: Cleanup deprecated Department and Teacher methods

30.8.0 (04-08-2020)
- Improvement: Simplified curricular rule executors creation
- Refactor: Deprecated old curricular rule execution modes
- Fix: Enrolment state not evaluated label should not be flunked  

30.7.0 (29-07-2020)
- Refactor: Moved relation PersonCountryHighSchool from specification to academic-core
- Improvement: Added second nacionality to PersonBean

30.6.2 (27-07-2020)
- Improvement: In student portal initial screen, show execution course alternative site
- Improvement: Simplified competence course acronym generation
- Fix: PreviousYearsEnrolmentExecutor should also collect root curriculum group rules on verification context 

30.6.1 (30-06-2020)
- Fix: Typo in Languages method

30.6.0 (30-06-2020)
- New feature: Specify shift languages
- Improvement: Updated permission service
- Improvement: New methods to check if shift and school class are free for a specific registration 
- Fix: Add coordinator responsible setter with primitive boolean param

30.5.1 (22-06-2020)
- Fix: Summaries control - sort intervals and fix course url site

30.5.0 (12-06-2020)
- New feature: Shifts extra capacity, used when its own is full

30.4.3 (09-06-2020)
- Improvement: Added code to ShiftCapacityType 

30.4.2 (01-06-2020)
- Fix: Better handling of execution courses attends merge
- Refactor: Comment unused Enrolment constructor and change default constructor visibility to protected

30.4.1 (21-05-2020)
- Improvement: Improved PermissionService
- Fix: Remove restriction for unique attends in an execution coruse within all registrations of a student

30.4.0 (20-05-2020)
- Improvement: added support for enrolment prefilter curricular rule level 
- Fix: Context intervals intersection should be with execution aggregators

30.3.1 (08-05-2020)